added centra panel ui to play

--- a/assets/scss/base/_variables.scss
+++ b/assets/scss/base/_variables.scss
@@ -1,8 +1,7 @@
 /* colors */
 
 :root {
-    --main-color: #0359ff; /* #0456FE */
-    --gray-color: #732c32;
+    --main-color: #1b4aa9; /*0359ff; /* #0456FE */
     --blue-soft: #2b91fd;
     --fail-color: #d03131;
     --success-color: #01ba3d;
