--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -1,5 +1,7 @@
 @import "base/reset";
 @import "base/mixins";
 @import "base/variables";
+@import "components/buttons";
 @import "components/roscow";
 @import "components/counters";
+@import "components/panel";
