main functionality done, styling counters

--- a/assets/scss/components/_panel.scss
+++ b/assets/scss/components/_panel.scss
@@ -54,7 +54,7 @@
     .begin-with {
         color: var(--main-color);
     }
-    input {
+    .input-answer {
         border-bottom: 1px solid var(--light-color);
         padding-bottom: 5px;
         margin-bottom: 15px;
