--- a/assets/scss/components/_counters.scss
+++ b/assets/scss/components/_counters.scss
@@ -3,49 +3,59 @@
     width: 20%;
     height: 130px;
     align-self: flex-end;
-    display: flex;
-    align-items: flex-end;
+    display: grid;
+    grid-template-columns: 1fr 60px;
+    grid-template-rows: 1fr 60px;
+    gap: 10px 10px;
+    justify-items: end;
+    align-items: center;
 }
-.timer {
+
+[class^="counter-"] {
     display: inline-flex;
     justify-content: center;
     align-items: center;
+    font-size: 1.875rem;
+    text-shadow: 4px 4px 2px rgba(16 72 186 / 98%);
+    border-radius: 50%;
+    border: 3px solid var(--light-color);
+}
+
+[class^="label-"] {
+    font-size: 1rem;
+    text-transform: uppercase;
+    text-align: right;
+    padding-right: 10px;
+}
+
+.counter-timer {
     width: 130px;
     height: 130px;
-    border-radius: 50%;
-    border: 1px solid var(--light-color);
+    font-size: 2.6rem;
 }
+
 .counter-success {
-    display: inline-flex;
-    justify-content: center;
-    align-items: center;
     width: 80px;
     height: 80px;
-    border-radius: 50%;
-    border: 1px solid var(--light-color);
     align-self: center;
     margin-left: -10px;
-}
-
-.counters {
-    flex-direction: column;
-    justify-content: flex-end;
-}
-
-.wrap-counter-fails,
-.wrap-counter-remaining {
-    display: flex;
+    z-index: -1;
 }
 
 .counter-fails,
 .counter-remaining {
-    display: flex;
-    justify-content: center;
-    align-items: center;
     width: 60px;
     height: 60px;
-    border-radius: 50%;
-    border: 1px solid var(--light-color);
+}
+
+.counter-timer,
+.counter-remaining {
+    background: rgb(4, 86, 254); /* Old browsers */
+    background: linear-gradient(
+        to right,
+        rgba(4, 86, 254, 1) 0%,
+        rgba(19, 107, 255, 1) 100%
+    );
 }
 
 .label-counter-remaining,
