--- a/assets/scss/components/_roscow.scss
+++ b/assets/scss/components/_roscow.scss
@@ -82,32 +82,47 @@ h1 span {
     );
     animation: none;
 }
-.letter:hover:before {
+
+.succeeded {
+    background: rgb(4, 86, 254); /* Old browsers */
+    background: linear-gradient(
+        to right,
+        rgb(25, 254, 4) 0%,
+        rgba(62, 247, 90, 0.624) 100%
+    );
+}
+
+.failed {
+    background: rgb(4, 86, 254); /* Old browsers */
+    background: linear-gradient(
+        to right,
+        rgb(254, 4, 4) 0%,
+        rgba(254, 53, 53, 0.624) 100%
+    );
+}
+
+.current-letter:before {
     content: "";
     position: absolute;
     width: 100%;
     height: 100%;
     border-radius: 50%;
     background-color: rgba(246, 176, 180, 0.2);
+    animation: pulseLetter 1s infinite;
 }
 
 .inner-letter {
     text-shadow: 4px 4px 2px rgba(16 72 186 / 98%);
 }
 
-.letter:hover,
-.letter:focus {
-    animation: pulseLetter 1s infinite;
-}
-
 @keyframes pulseLetter {
     0% {
-        box-shadow: 0 0 0 0 rgba(255, 255, 255, 0.4);
+        box-shadow: 0 0 0 0 rgba(42, 64, 230, 0.495);
     }
     70% {
-        box-shadow: 0 0 0 10px rgba(255, 255, 255, 0);
+        box-shadow: 0 0 0 10px rgba(42, 64, 230, 0.4);
     }
     100% {
-        box-shadow: 0 0 0 0 rgba(255, 255, 255, 0);
+        box-shadow: 0 0 0 0 rgba(42, 64, 230, 0.4);
     }
 }
