--- a/assets/scss/base/_variables.scss
+++ b/assets/scss/base/_variables.scss
@@ -1,12 +1,13 @@
 /* colors */
 
 :root {
-    --main-color: #1b4aa9; /*0359ff; /* #0456FE */
+    --main-color: #0455b3; //1b4aa9; /*0359ff; /* #0456FE */
+    --letter-color: #6fb1f6;
     --blue-soft: #2b91fd;
-    --fail-color: #d03131;
-    --success-color: #01ba3d;
+    --fail-color: #cf521b; //d03131;
+    --success-color: #99b30c; // 01ba3d;
     --light-color: white;
-    --body-color: #0088ff;
+    --body-color: #1f87ff; //0088ff;
 
     --roscow-size: 600;
 }
