--- a/assets/scss/components/_roscow.scss
+++ b/assets/scss/components/_roscow.scss
@@ -1,41 +1,3 @@
-body {
-    font-family: "Nunito", sans-serif;
-    font-weight: 800;
-    background-color: #0088ff;
-    color: var(--light-color);
-}
-
-footer {
-    display: flex;
-    justify-content: center;
-    gap: 20px;
-    padding: 30px;
-}
-
-footer p,
-footer address {
-    margin: 5px 0;
-    font-size: 0.8rem;
-    font-style: normal;
-    font-weight: 600;
-}
-address a {
-    color: var(--light-color);
-}
-
-h1 {
-    font-size: 1.6rem;
-    font-weight: 600;
-    text-align: center;
-    letter-spacing: 10px;
-}
-h1 span {
-    display: block;
-    font-size: 3rem;
-    font-weight: 800;
-    letter-spacing: 0;
-}
-
 .roscow-wrapper {
     position: relative;
     width: 1000px;
@@ -74,31 +36,16 @@ h1 span {
     align-items: center;
     font-size: 2rem;
     color: var(--light-color);
-    background: rgb(4, 86, 254); /* Old browsers */
-    background: linear-gradient(
-        to right,
-        rgba(4, 86, 254, 1) 0%,
-        rgba(19, 107, 255, 1) 100%
-    );
+    background: var(--letter-color);
     animation: none;
 }
 
 .succeeded {
-    background: rgb(4, 86, 254); /* Old browsers */
-    background: linear-gradient(
-        to right,
-        rgb(25, 254, 4) 0%,
-        rgba(62, 247, 90, 0.624) 100%
-    );
+    background-color: var(--success-color);
 }
 
 .failed {
-    background: rgb(4, 86, 254); /* Old browsers */
-    background: linear-gradient(
-        to right,
-        rgb(254, 4, 4) 0%,
-        rgba(254, 53, 53, 0.624) 100%
-    );
+    background-color: var(--fail-color);
 }
 
 .current-letter:before {
@@ -107,7 +54,7 @@ h1 span {
     width: 100%;
     height: 100%;
     border-radius: 50%;
-    background-color: rgba(246, 176, 180, 0.2);
+    background-color: rgba(4, 86, 254);
     animation: pulseLetter 1s infinite;
 }
 
