--- a/assets/scss/components/_buttons.scss
+++ b/assets/scss/components/_buttons.scss
@@ -9,6 +9,12 @@
 .btn-dark {
     background-color: var(--main-color);
     color: var(--light-color);
+    border: 1px solid var(--main-color);
+    &:hover,
+    &:focus {
+        background-color: var(--light-color);
+        color: var(--main-color);
+    }
 }
 
 .btn-light {
