--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -1,6 +1,7 @@
 @import "base/reset";
 @import "base/mixins";
 @import "base/variables";
+@import "base/general";
 @import "components/buttons";
 @import "components/roscow";
 @import "components/counters";
