--- a/assets/scss/components/_roscow.scss
+++ b/assets/scss/components/_roscow.scss
@@ -1,11 +1,17 @@
 .roscow-wrapper {
     position: relative;
-    width: 1000px;
+    width: 100%;
     height: 600px;
     display: flex;
     justify-content: space-between;
     align-items: center;
     margin: 0 auto;
+}
+
+@media screen and (min-width: 1000px) {
+    .roscow-wrapper {
+        width: 1000px;
+    }
 }
 
 .roscow {
