--- a/assets/scss/components/_counters.scss
+++ b/assets/scss/components/_counters.scss
@@ -16,7 +16,7 @@
     justify-content: center;
     align-items: center;
     font-size: 1.875rem;
-    text-shadow: 4px 4px 2px rgba(16 72 186 / 98%);
+    text-shadow: 4px 4px 2px rgba(4, 85, 179 / 0.9); // rgba(16 72 186 / 98%);
     border-radius: 50%;
     border: 3px solid var(--light-color);
 }
@@ -50,12 +50,8 @@
 
 .counter-timer,
 .counter-remaining {
-    background: rgb(4, 86, 254); /* Old browsers */
-    background: linear-gradient(
-        to right,
-        rgba(4, 86, 254, 1) 0%,
-        rgba(19, 107, 255, 1) 100%
-    );
+    background-color: var(--main-color);
+    text-shadow: 3px 3px 2px rgb(106 157 215 / 90); // rgba(16 72 186 / 98%);
 }
 
 table .counter-success,
