--- a/assets/scss/base/_general.scss
+++ b/assets/scss/base/_general.scss
@@ -32,6 +32,7 @@ h1 {
     font-weight: 600;
     text-align: center;
     letter-spacing: 10px;
+    line-height: 1.2;
     span {
         display: block;
         font-size: 3rem;
