--- a/assets/scss/components/_panel.scss
+++ b/assets/scss/components/_panel.scss
@@ -143,7 +143,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: var(--blue-soft);
+    background-color: #c0dbf4;
     &.open {
         visibility: visible;
         opacity: 1;
